<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AS Rehber</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="contact_list">Kişiler</string>
    <string name="plus">+</string>
    <string name="edit_person">Kişi Düzenle</string>
    <string name="name">Adı</string>
    <string name="surname">Soyadı</string>
    <string name="firm">Firma İsmi</string>
    <string name="gsm">Cep Telefonu</string>
    <string name="email">E-posta Adresi</string>
    <string name="edit">Düzenle</string>
    <string name="delete">Sil</string>
    <string name="add_person">Kişi Ekle</string>
    <string name="save">Kaydet</string>
    <string name="white">#FFFFFF</string>
    <string name="title_activity_detail_person">Kişi Detayı</string>
    <string name="confirm_delete">Bu kişiyi silmek istediğinizden emin misiniz?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="send_sms">SMS Gönder</string>
    <string name="email_not_valid">E-posta Adresi Geçersiz</string>
    <string name="name_is_empty">Lütfen Bir Ad Giriniz</string>
    <string name="gsm_is_empty">Lütfen Bir Cep Telefonu Giriniz</string>
    <string name="search">Ara:</string>

</resources>