<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:padding="5dp"
            android:text="@string/title_activity_detail_person"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="3dp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:ems="10"
                android:textColor="#0000fe"
                android:textSize="17sp"
                android:textStyle="bold"
                android:width="250sp" >
            </TextView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/surname" />

            <TextView
                android:id="@+id/surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:ems="10"
                android:textColor="#0000fe"
                android:textSize="17sp"
                android:textStyle="bold"
                android:width="250sp" >
            </TextView>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/surname"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/firm" />

            <TextView
                android:id="@+id/firm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:ems="10"
                android:textColor="#0000fe"
                android:textSize="17sp"
                android:textStyle="bold"
                android:width="250sp" >
            </TextView>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firm"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/gsm" />

            <TextView
                android:id="@+id/gsm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:ems="10"
                android:textColor="#0000fe"
                android:textSize="17sp"
                android:textStyle="bold"
                android:width="250sp" >
            </TextView>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gsm"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/email" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/textView6"
                android:ems="10"
                android:textColor="#0000fe"
                android:textSize="17sp"
                android:textStyle="bold"
                android:width="250sp" >

            </TextView>
            
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/name"
                android:layout_below="@+id/email"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="105dp"
                android:onClick="editPerson"
                android:text="@string/edit" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/button1"
                android:layout_alignBottom="@+id/button1"                
                android:layout_marginLeft="220dp"
                android:onClick="removePerson"
                android:text="@string/delete" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/button2"
                android:layout_alignBottom="@+id/button2"
                android:onClick="sendSMS"
                android:text="@string/send_sms" />
            
        </RelativeLayout>
    </LinearLayout>

</ScrollView>