<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:padding="5dp"
            android:text="@string/edit_person"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="3dp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:ems="10"
                android:width="250sp"
                android:textColor="#0000fe"
                android:inputType="text|textCapSentences" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:ems="10"
                android:width="250sp"
                android:textColor="#0000fe"
                android:inputType="text|textCapSentences" >
            </EditText>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/surname"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/firm" />

            <EditText
                android:id="@+id/firm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:ems="10"
                android:width="250sp"
                android:textColor="#0000fe"
                android:inputType="text|textCapSentences" >
            </EditText>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firm"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/gsm" />

            <EditText
                android:id="@+id/gsm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:ems="10"
                android:width="250sp"
                android:textColor="#0000fe"
                android:inputType="phone" >
            </EditText>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gsm"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/textView6"
                android:ems="10"
                android:width="250sp"
                android:textColor="#0000fe"
                android:inputType="textEmailAddress" >
            </EditText>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/name"
                android:layout_below="@+id/email"
                android:layout_marginTop="15dp"
                android:onClick="editPerson"
                android:text="@string/save" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>